Fixed some spacing in Newsletter section

--- a/style.css
+++ b/style.css
@@ -476,9 +476,10 @@ h4{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin-top: 2rem;
     width: 100%;
-    height: 200px;
+    height: 250px;
     padding: 2rem 0;
 }
 
